--- a/tax.css
+++ b/tax.css
@@ -10,33 +10,66 @@ body {
 }
 
 header {
-    background: #A4E0EB;
+    background: #152235;
     width: 100%;
     height: 100px;
     font-size:3em; 
     text-align: left;
-    color: black;
+    color: white;
+    border-style: solid;
+    border-color: black;
+    border-width: 5px;
+    border-bottom-style: hidden;
+        
+    
 }
     
 
 #content {
-    background: #FBFBFB;
+    background: #e5ecf9;
     height: 556px;
-    width: 100%;
-    border: 1px solid #FBFBFB;
+    width: 100%; 
+    border-style: solid; 
+    border-color: black; 
+    border-width:5px;
+    
+    
+   
 }
 
 h1 { 
+   align-content: 30px;
+   padding-left: 30px;
+   font-size: 0.6em; 
+   float: left;
+   margin-top: 0px;
+   font-family: Linux Libertine Display G;
 
-padding-left: 30px; 
+}
+
+h2 { 
+   margin-top: 0px;
+   margin-left: 25px; 
+   font-size: 0.6em; 
+   float: left;
+   font-family: Linux Libertine Display G;
+   font-style: italic;
+}
+
+h3 { 
+   align-content: 30px;
+   padding-left: 30px;
+   font-size: 2em; 
+
 }
 
 p { 
-padding-left: 30px;}
+   padding-left: 25px;}
 
 
 fieldset {
     margin-left: 400px;
-    margin-right: 220px;
-    float: inherit: 10px;
+    margin-right: 250px;
+    float: right;
+  
 }
