--- a/tax.css
+++ b/tax.css
@@ -10,66 +10,56 @@ body {
 }
 
 header {
-    background: #152235;
+    background: #A4E0EB;
     width: 100%;
     height: 100px;
     font-size:3em; 
     text-align: left;
-    color: white;
-    border-style: solid;
-    border-color: black;
-    border-width: 5px;
-    border-bottom-style: hidden;
-        
-    
+    color: black;
 }
     
 
 #content {
-    background: #e5ecf9;
+    background: #FBFBFB;
     height: 556px;
-    width: 100%; 
-    border-style: solid; 
-    border-color: black; 
-    border-width:5px;
-    
-    
-   
+    width: 100%;
+    border: 1px solid #FBFBFB;
+}
+ nav {
+      background: #A07789;
+      width: 100%;
+}
+
+nav ul {
+    list-style: none;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+}
+
+nav li {
+    display: inline-block;
+    width: auto;
+    padding: 0;
+    margin: 5px;
+}
+
 }
 
 h1 { 
-   align-content: 30px;
-   padding-left: 30px;
-   font-size: 0.6em; 
-   float: left;
-   margin-top: 0px;
-   font-family: Linux Libertine Display G;
 
-}
-
-h2 { 
-   margin-top: 0px;
-   margin-left: 25px; 
-   font-size: 0.6em; 
-   float: left;
-   font-family: Linux Libertine Display G;
-   font-style: italic;
-}
-
-h3 { 
-   align-content: 30px;
-   padding-left: 30px;
-   font-size: 2em; 
-
+padding-left: 30px; 
 }
 
 p { 
-   padding-left: 25px;}
+padding-left: 30px;}
 
 
 fieldset {
     margin-left: 400px;
-    margin-right: 250px;
-    float: right;
-  
+    margin-right: 220px;
+    float: inherit: 10px;
+}
+
+output {
 }
