--- a/tax.css
+++ b/tax.css
@@ -13,19 +13,15 @@ header {
     background: #A4E0EB;
     width: 100%;
     height: 100px;
-    font-size:3em; 
+    font-size:2.5em; 
+    font-family: linux libertine display g;
     text-align: left;
     color: black;
+  
 }
-    
 
-#content {
-    background: #FBFBFB;
-    height: 556px;
-    width: 100%;
-    border: 1px solid #FBFBFB;
-}
- nav {
+    
+nav {
       background: #A07789;
       width: 100%;
 }
@@ -44,7 +40,14 @@ nav li {
     margin: 5px;
 }
 
+
+#content {
+    background: #FBFBFB;
+    height: 556px;
+    width: 100%;
+    border: 1px solid #FBFBFB;
 }
+
 
 h1 { 
 
