--- a/tax.css
+++ b/tax.css
@@ -13,17 +13,14 @@ header {
     background: #A4E0EB;
     width: 100%;
     height: 100px;
-    font-size:2.5em; 
-    font-family: linux libertine display g;
-    text-align: left;
-    color: black;
+   
   
 }
 
     
 nav {
-      background: #A07789;
-      width: 100%;
+    background: #A07789;
+    width: 100%;
 }
 
 nav ul {
@@ -48,15 +45,24 @@ nav li {
     border: 1px solid #FBFBFB;
 }
 
+h1 {
+    font-size:2.5em; 
+    font-family: linux libertine display g;
+    text-align: left;
+    color: black;
 
-h1 { 
+}
 
-padding-left: 30px; 
+h2 { 
+
+    padding-left: 30px; 
+    font-size: 2em;
 }
 
 p { 
-padding-left: 30px;}
-
+    padding-left: 30px;
+    padding-right:700px;
+}
 
 fieldset {
     margin-left: 400px;
@@ -66,3 +72,4 @@ fieldset {
 
 output {
 }
+
