--- a/tax.css
+++ b/tax.css
@@ -13,8 +13,6 @@ header {
     background: #A4E0EB;
     width: 100%;
     height: 100px;
-   
-  
 }
 
     
@@ -33,7 +31,6 @@ nav ul {
 nav li {
     display: inline-block;
     width: auto;
-    padding: 0;
     margin: 5px;
 }
 
@@ -46,11 +43,11 @@ nav li {
 }
 
 h1 {
-    font-size:2.5em; 
+    font-size: 2.7em; 
     font-family: linux libertine display g;
     text-align: left;
     color: black;
-
+    padding-left: 30px;
 }
 
 h2 { 
@@ -70,5 +67,3 @@ fieldset {
     float: inherit: 10px;
 }
 
-output {
-}
